# stevens

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_openclaw_evaluation.md  CLAUDE_skills_layer.md  DEMIURGE.md  DEVELOPMENT.md  README.md  STATUS.md  STEVENS.md  assistant_prd_trd.docx  compose.yaml  pyproject.toml
agents/: Dockerfile  pyproject.toml
agents/src/agents/: registry.yaml  runtime.py  tool_factory.py
agents/src/agents/email_pm/: agent.py  tools.py
agents/src/agents/installer/: __init__.py  agent.py
agents/src/agents/pdf/: __init__.py  agent.py
agents/src/agents/web/: __init__.py  agent.py
agents/tests/: test_arachne_agent.py  test_email_pm_skills_wiring.py  test_installer_agent.py  test_installer_e2e.py  test_sphinx_agent.py
channels/calendar/: pyproject.toml
channels/calendar/src/calendar_adapter/: __init__.py  add_account.py  main.py  watch_renew.py
channels/gmail/: Dockerfile  pyproject.toml
channels/gmail/src/gmail_adapter/: add_account.py  main.py  watch_renew.py
channels/gmail/tests/: test_route.py
channels/signal/: pyproject.toml
channels/signal/src/signal_adapter/: __init__.py  add_account.py  client.py  main.py
channels/signal/tests/: test_main.py
channels/whatsapp-cloud/: pyproject.toml
channels/whatsapp-cloud/src/whatsapp_cloud_adapter/: __init__.py  add_account.py  main.py
plugins/demiurge-mortal-email-pm/: pyproject.toml
plugins/demiurge-mortal-email-pm/src/email_pm/: __init__.py  agent.py  bootstrap.py  plugin.yaml  prompts.py
plugins/demiurge-mortal-installer/: pyproject.toml
plugins/demiurge-mortal-installer/src/installer/: __init__.py  bootstrap.py  plan_builder.py  plugin.yaml
plugins/demiurge-power-calendar/: Dockerfile  pyproject.toml
plugins/demiurge-power-calendar/src/calendar_adapter/: __init__.py  add_account.py  bootstrap.py  plugin.yaml
plugins/demiurge-power-signal/: Dockerfile  pyproject.toml
plugins/demiurge-power-signal/src/signal_adapter/: __init__.py  adapter.py  bootstrap.py  main.py  plugin.yaml  route.py
plugins/demiurge-power-signal/tests/: test_adapter.py  test_client.py
plugins/demiurge-power-whatsapp-cloud/: Dockerfile  pyproject.toml
plugins/demiurge-power-whatsapp-cloud/src/whatsapp_cloud_adapter/: __init__.py  add_account.py  bootstrap.py  plugin.yaml
security/: Dockerfile  pyproject.toml
security/policy/: agents.yaml  approval_forwarding.yaml  capabilities.yaml
security/policy/presets/: email_pm.yaml  interface.yaml  subject_agent.yaml
security/scripts/: gen_test_keypair.py
security/src/demiurge/: __init__.py  __main__.py  admin_client.py  audit_tail.py  canonical.py  channels_list.py  cli.py  cli_approvals.py  cli_hire.py  cli_powers.py  cli_runtime.py  context.py  dispatch.py  doctor.py  framing.py  identity.py  keyring_passphrase.py  onboard.py  policy.py  presets.py  provision.py  reset.py  sealed_store.py  server.py  status.py  system_runtime_postgres.py
security/src/demiurge/approvals/: forwarding.py  predicates.py  queue.py  store.py
security/src/demiurge/bootstrap/: __init__.py  cli_bootstrap.py  migrate.py  postgres.py  preflight.py  systemd.py
security/src/demiurge/capabilities/: __init__.py  admin.py  calendar.py  gmail.py  network.py  ping.py  registry.py  system.py
security/src/demiurge/creatures/: __init__.py  scheduler.py
security/src/demiurge/mechanisms/: __init__.py  apt.py
security/src/demiurge/outbound/: __init__.py  calendar.py  whatsapp_cloud.py
security/src/demiurge/pantheon/: __init__.py
security/src/demiurge/runtime/: __init__.py  __main__.py  creature_runtime.py  daemon.py  power_runtime.py  supervisor.py
security/src/demiurge/wizards/: __init__.py  google.py
security/src/stevens_security/: __init__.py  __main__.py  admin_client.py  audit.py  audit_tail.py  canonical.py  channels_list.py  cli.py  cli_approvals.py  dispatch.py  doctor.py  identity.py  keyring_passphrase.py  onboard.py  policy.py  presets.py  provision.py  server.py  status.py  system_runtime.py
security/src/stevens_security/approvals/: __init__.py  matcher.py  store.py  store_postgres.py
security/src/stevens_security/bootstrap/: __init__.py  cli_bootstrap.py  migrate.py  postgres.py  systemd.py
security/src/stevens_security/mechanisms/: base.py
security/tests/: test_admin_client.py  test_approval_dispatch.py  test_approval_forwarding.py  test_approvals_matcher.py  test_audit.py  test_audit_tail.py  test_bootstrap_cli.py  test_bootstrap_migrate.py  test_bootstrap_postgres.py  test_bootstrap_preflight.py  test_bootstrap_systemd.py  test_canonical.py  test_capabilities_registry.py  test_capability_compress.py  test_capability_network.py  test_capability_system.py  test_channels_list.py  test_charon.py  test_cli.py  test_cli_approval.py  test_cli_hire.py  test_cli_powers.py  test_cli_runtime.py  test_creatures_scheduler.py  test_dispatch.py  test_doctor.py  test_end_to_end.py  test_framing.py  test_identity.py  test_janus.py  test_keyring_passphrase.py  test_mechanisms_apt.py  test_onboard.py  test_outbound_calendar.py  test_outbound_gmail.py  test_outbound_whatsapp_cloud.py  test_pantheon_hades.py  test_pantheon_hephaestus_audit_angel.py  test_pantheon_hephaestus_forge.py  test_pantheon_hephaestus_forge_beast_automaton.py  (+16 more)
shared/: pyproject.toml
shared/src/shared/: __init__.py  accounts.py  approvals.py  bus.py  canonical.py  db.py  events.py  prompt_safety.py  redactor.py  security_client.py
shared/tests/: test_canonical.py  test_channels_framework.py  test_compress_anthropic.py  test_creatures_base.py  test_creatures_dispatch.py  test_creatures_feed.py  test_creatures_universal.py  test_plugin_discovery.py  test_plugin_manifest.py  test_prompt_safety.py  test_propose.py  test_redactor.py  test_search_backends.py  test_search_brave.py  test_security_client.py  test_web_validator.py
skills/: pyproject.toml  registry.yaml
skills/src/skills/: __init__.py  registry.py  retrieval.py
skills/tests/: conftest.py  test_pdf_dispatcher.py  test_playbook_loader.py  test_read_pdf.py  test_registry.py  test_retrieval.py  test_smoke.py  test_web_skills.py
(+143 files in other folders)
