[project]
name = "assistant"
version = "0.1.0"
description = "Personal multi-agent assistant"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"

[tool.uv.workspace]
members = ["shared", "channels/gmail", "channels/whatsapp-cloud", "channels/calendar", "channels/signal", "agents", "security", "skills"]

[tool.uv.sources]
shared = { workspace = true }
gmail-adapter = { workspace = true }
whatsapp-cloud-adapter = { workspace = true }
calendar-adapter = { workspace = true }
agents = { workspace = true }
demiurge = { workspace = true }
skills = { workspace = true }
signal-adapter = { workspace = true }
