[project]
name = "assistant"
version = "0.1.0"
description = "Personal multi-agent assistant"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
    "shared",
    "agents",
    "security",
    "skills",
    # v0.11 plugins (formerly channels/<name>)
    "plugins/demiurge-power-gmail",
    "plugins/demiurge-power-calendar",
    "plugins/demiurge-power-whatsapp-cloud",
    "plugins/demiurge-power-signal",
    "plugins/demiurge-mortal-email-pm",
    "plugins/demiurge-mortal-installer",
]

[tool.uv.sources]
shared = { workspace = true }
agents = { workspace = true }
demiurge = { workspace = true }
skills = { workspace = true }
"demiurge-power-gmail" = { workspace = true }
"demiurge-power-calendar" = { workspace = true }
"demiurge-power-whatsapp-cloud" = { workspace = true }
"demiurge-power-signal" = { workspace = true }
"demiurge-mortal-email-pm" = { workspace = true }
"demiurge-mortal-installer" = { workspace = true }
