[project]
name = "shared"
version = "0.1.0"
description = "Shared schemas, bus, and DB helpers"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "psycopg[binary,pool]>=3.1",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
