[project]
name = "gmail-adapter"
version = "0.1.0"
description = "Gmail channel adapter"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "google-api-python-client>=2.120",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.28",
    "google-cloud-pubsub>=2.20",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_adapter"]
