[project]
name = "signal-adapter"
version = "0.1.0"
description = "Signal channel adapter — talks to signal-cli-rest-api"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "stevens-security",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "click>=8.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_adapter"]
