[project]
name = "whatsapp-cloud-adapter"
version = "0.1.0"
description = "WhatsApp Cloud API channel adapter (Meta/Facebook Graph API)"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_cloud_adapter"]
