[project]
name = "demiurge-mortal-email-pm"
version = "1.0.0"
description = "Email PM Mortal plugin for Demiurge — inbox triage + reply drafting"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "skills",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pyyaml>=6.0",
]

[project.entry-points."demiurge.mortals"]
email_pm = "email_pm:manifest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_pm"]

[tool.hatch.build.targets.wheel.force-include]
"src/email_pm/plugin.yaml" = "email_pm/plugin.yaml"
