[project]
name = "demiurge-mortal-installer"
version = "1.0.0"
description = "Installer Mortal plugin for Demiurge — proposes apt-install plans for Enkidu to execute"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "pyyaml>=6.0",
]

[project.entry-points."demiurge.mortals"]
installer = "installer:manifest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/installer"]

[tool.hatch.build.targets.wheel.force-include]
"src/installer/plugin.yaml" = "installer/plugin.yaml"
