[project]
name = "demiurge-power-calendar"
version = "1.0.0"
description = "Google Calendar power plugin for Demiurge — webhook + request-based"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.28",
    "googleapis-common-protos>=1.63",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.entry-points."demiurge.powers"]
calendar = "calendar_adapter:manifest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_adapter"]

[tool.hatch.build.targets.wheel.force-include]
"src/calendar_adapter/plugin.yaml" = "calendar_adapter/plugin.yaml"
