[project]
name = "demiurge-power-signal"
version = "1.0.0"
description = "Signal power plugin for Demiurge — polling + request-based"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "demiurge",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "click>=8.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.entry-points."demiurge.powers"]
signal = "signal_adapter:manifest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_adapter"]

[tool.hatch.build.targets.wheel.force-include]
"src/signal_adapter/plugin.yaml" = "signal_adapter/plugin.yaml"
