[project]
name = "demiurge-power-whatsapp-cloud"
version = "1.0.0"
description = "WhatsApp Cloud API power plugin for Demiurge — webhook + request-based"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.entry-points."demiurge.powers"]
whatsapp_cloud = "whatsapp_cloud_adapter:manifest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_cloud_adapter"]

[tool.hatch.build.targets.wheel.force-include]
"src/whatsapp_cloud_adapter/plugin.yaml" = "whatsapp_cloud_adapter/plugin.yaml"
